--- a/jobdelas/src/main/resources/static/css/cursos.css
+++ b/jobdelas/src/main/resources/static/css/cursos.css
@@ -1,122 +1,115 @@
-
 .container-principal {
-    display: flex;
-    text-align: center;
-    flex-direction: column;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
 }
 
 
 .container-cursos {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 30px;
 }
 
 .container-aprendizado {
-    border-radius: 20px;
-    background-color: white;
+  border-radius: 20px;
+  background-color: white;
 }
-
-
 
 .card-curso {
-    background-color: #ffffff;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    padding: 25px 10px !important;
-    width: 250px;
-    height: 200px;
+  background-color: #ffffff;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 25px 10px !important;
+  width: 250px;
+  height: 220px;
 }
 
 .card-curso h3 {
-    overflow: hidden;
-    white-space: nowrap;
-    color: #B378FF;
-    font-size: 1.5rem;
-    display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  color: #B378FF;
+  font-size: 1.5rem;
+  display: inline-block;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
   }
-  
-  @keyframes typing {
-    from {
-      width: 0;
-    }
-    to {
-      width: 100%;
-    }
+
+  to {
+    width: 100%;
   }
-  
-
-  
-
-
-
-.card-curso h3 {
-  animation: typing 1.5s steps(20) forwards; 
 }
 
 
-  
+.card-curso h3 {
+  animation: typing 1.5s steps(20) forwards;
+}
+
 
 .card-curso p {
-    color: #202020;
+  color: #202020;
 }
 
 .card-curso button {
-    background-color: #B378FF;
-    color: #fff;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-
+  background-color: #B378FF;
+  color: #fff;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.card-curso button:hover {
-    background-color: #B378FF;
+.card-curso a {
+  text-decoration: none;
+  color: #fff;
 }
 
 .elementos-adicionais {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap:5px;
-    margin-top: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 5px;
+  margin-top: 20px;
 }
-
-
 
 
 @media only screen and (max-width: 896px) {
   .container-cursos {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-.card-curso {
-  width: 100%;
-  height: 200px;
-}
-.icone-aprendizado {
-  font-size: 1.6rem;
-}
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
 
-.elemento p {
-  font-size: 15px;
-}
+  .card-curso {
+    width: 100%;
+    height: 200px;
+  }
+
+  .icone-aprendizado {
+    font-size: 1.6rem;
+  }
+
+  .elemento p {
+    font-size: 15px;
+  }
 
 }
 
 
 @media only screen and (max-width: 650px) {
 
-.container-principal {
-  margin: 20px 15px ;
+  .container-principal {
+    margin: 20px 15px;
 
-}
+  }
 }
