--- a/jobdelas/src/main/resources/static/css/post.css
+++ b/jobdelas/src/main/resources/static/css/post.css
@@ -3,6 +3,7 @@
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    margin-bottom: 50px;
 }
 
 .user-info {
