--- a/jobdelas/src/main/resources/static/css/curso.css
+++ b/jobdelas/src/main/resources/static/css/curso.css
@@ -20,6 +20,7 @@
    overflow-y: hidden;
   }
 
+
   
   .lista-aulas {
     display: flex;
@@ -48,13 +49,17 @@
     background-color: #B378FF;
     color: #fff;
     padding: 5px 10px;
-    border: none;
+    border: 1px solid transparent ;
+    outline: 1px;
     border-radius: 4px;
     cursor: pointer;
   }
   
   .btn-assistir:hover {
-    background-color: #B378FF;
+    background: var(--fundo-dividido);
+    color:#ffffff;
+    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 1px solid #B378FF ;
   }
   
 .modal-content {
@@ -80,3 +85,4 @@
     width: 100%;
     border-radius: 8px;
   }
+
