--- a/jobdelas/src/main/resources/static/css/lista_tarefas.css
+++ b/jobdelas/src/main/resources/static/css/lista_tarefas.css
@@ -18,6 +18,8 @@
     text-align: center;
     font-weight: 600;
     margin-top: 10px;
+    overflow-y: hidden;
+
   }
   .tarefa {
     background-color: #fff;
