--- a/jobdelas/src/main/resources/templates/usuario/perfil.html
+++ b/jobdelas/src/main/resources/templates/usuario/perfil.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/profile_header.css" />
     <link rel="stylesheet" href="/css/profile_body_sobre.css" />
+    <link rel="stylesheet" href="/css/profile_body_educacao.css" />
     <link rel="stylesheet" href="/css/index.css" />
     <title>Perfil</title>
   </head>
@@ -33,6 +34,7 @@
       <section class="profile_header"></section>
       <section class="profile_body">
         <div class="profile_sobre"></div>
+        <div class="profile_educacao"></div>
       </section>
     </main>
 
