--- a/jobdelas/src/main/resources/static/css/header.css
+++ b/jobdelas/src/main/resources/static/css/header.css
@@ -81,11 +81,12 @@
 
 @media only screen and (max-width: 1050px) {
     .logo_jobdelas {
-        height: 30px;
+        height: 30px !important;
     }
 }
 
 @media only screen and (max-width: 840px) {
+
     .logo_jobdelas {
         display: none;
     }
@@ -112,6 +113,15 @@
 
 
 @media screen and (max-width: 600px) {
+    .logo_jobdelas {
+      display: block;
+height: 25px !important;
+    }
+
+    .header {
+        justify-content: space-between;
+    }
+
     .nav {
       flex-direction: column;
       position: fixed;
