--- a/jobdelas/src/main/resources/templates/index.html
+++ b/jobdelas/src/main/resources/templates/index.html
@@ -38,9 +38,7 @@
         </div>
       </section>
 
-      <!-- Modals -->
-
-      <div
+      <!-- <div
         class="modal fade"
         id="tarefaModal"
         tabindex="-1"
@@ -62,7 +60,6 @@
               </button>
             </div>
             <div class="modal-body">
-              <!-- Adicione o formulário aqui -->
               <form
                 method="post"
                 th:object="${tarefa}"
@@ -91,8 +88,6 @@
                 </div>
               </form>
 
-              <!-- Fim do formulário -->
-
               <ul class="list-group" id="modalTaskList">
                 <li
                   class="list-group-item d-flex justify-content-between align-items-center"
@@ -106,9 +101,9 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="modal" id="writePostModal">
+      <!-- <div class="modal" id="writePostModal">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -171,8 +166,8 @@
               </button>
             </div>
 
-            <!-- Corpo do Modal -->
-            <div class="modal-body">
+          Corpo do Modal -->
+      <!-- <div class="modal-body">
               <form
                 method="PUT"
                 class="formulario"
@@ -227,10 +222,10 @@
                   <input type="text" class="form-control" id="portfolio" />
                 </div>
               </form>
-            </div>
+            </div> -->
 
-            <!-- Rodapé do Modal -->
-            <div class="modal-footer">
+      <!-- Rodapé do Modal -->
+      <!-- <div class="modal-footer">
               <button
                 type="button"
                 class="btn btn-primary"
@@ -242,7 +237,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </main>
     <script src="/js/home.js" type="module"></script>
 
