--- a/jobdelas/src/main/resources/static/css/cursos.css
+++ b/jobdelas/src/main/resources/static/css/cursos.css
@@ -8,7 +8,9 @@
 .container-cursos {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  justify-content: space-between;
+  align-items: center;
+  gap:30px;
   margin-top: 30px;
 }
 
