--- a/jobdelas/src/main/resources/templates/aprendizado/cursos.html
+++ b/jobdelas/src/main/resources/templates/aprendizado/cursos.html
@@ -31,8 +31,8 @@
       <section class="container-principal">
         <div class="container-aprendizado"></div>
 
-        <div th:each="curso : ${cursos}" class="container-cursos">
-          <div class="card-curso">
+        <div class="container-cursos">
+          <div th:each="curso : ${cursos}" class="card-curso">
             <h3><i class="fas fa-graduation-cap"></i> Título do Curso 1</h3>
             <p>
               <i class="fas fa-book"></i> Matéria:
@@ -46,10 +46,6 @@
               <i class="fas fa-play"></i> <a href="/curso">Learn </a>
             </button>
           </div>
-          <button>
-            <i class="fas fa-play"></i>
-            <a href="">Learn</a>
-          </button>
         </div>
       </section>
     </main>
