--- a/jobdelas/src/main/resources/static/css/cursos.css
+++ b/jobdelas/src/main/resources/static/css/cursos.css
@@ -17,6 +17,8 @@
 .container-aprendizado {
   border-radius: 20px;
   background-color: white;
+  gap:20px;
+  padding: 10px;
 }
 
 .card-curso {
@@ -30,32 +32,20 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 25px 10px !important;
-  width: 250px;
-  height: 220px;
+  width: 300px;
+  height: 300px;
 }
 
 .card-curso h3 {
   overflow: hidden;
-  white-space: nowrap;
+  white-space: normal;
   color: #B378FF;
-  font-size: 1.5rem;
   display: inline-block;
-}
-
-@keyframes typing {
-  from {
-    width: 0;
-  }
-
-  to {
-    width: 100%;
-  }
+  overflow-wrap: break-word;
 }
 
 
-.card-curso h3 {
-  animation: typing 1.5s steps(20) forwards;
-}
+
 
 
 .card-curso p {
