--- a/jobdelas/src/main/resources/templates/index.html
+++ b/jobdelas/src/main/resources/templates/index.html
@@ -34,10 +34,37 @@
         <div class="container_postagem">
           <div class="cardCriarPostagem"></div>
 
-          <div class="feed"></div>
+          <div class="feed">
+            <div th:each="postagem : ${postagens}" class="post">
+              <div class="user-info">
+                <img
+                  src="/img/iconfoto.png"
+                  alt="User"
+                  class="foto_criarpostagem"
+                />
+                <h4>Nome Usuario</h4>
+              </div>
+              <p class="post-date">Publicado em 25 de Agosto de 2023</p>
+              <p class="post-content" th:text="${postagem.conteudo}"></p>
+              <div class="post-actions">
+                <button class="like-button">
+                  <i class="fas fa-heart"></i> Curtir
+                </button>
+                <button class="comment-button">
+                  <i class="fas fa-comment"></i> Comentar
+                </button>
+                <button class="read-comments-button">
+                  <i class="fa-solid fa-circle-exclamation"></i> Denunciar
+                </button>
+                <button class="read-comments-button">
+                  <i class="fas fa-eye"></i> Ler Comentários
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
-      <div class="container mt-3">
+      <!-- <div class="container mt-3">
         <h2>Lista Postagens</h2>
         <table>
           <thead class="thead-dark">
@@ -49,15 +76,14 @@
             </tr>
           </thead>
           <tbody>
-            <tr th:each="postagem : ${postagens}">
+            <tr>
               <td th:text="${postagem.id}"></td>
               <td th:text="${postagem.categoria}"></td>
               <td th:text="${postagem.conteudo}"></td>
-              <td th:text="${postagem.dataComentario}"></td>
             </tr>
           </tbody>
         </table>
-      </div>
+      </div> -->
       <!-- <div
         class="modal fade"
         id="tarefaModal"
