--- a/jobdelas/src/main/resources/templates/aprendizado/aulas.html
+++ b/jobdelas/src/main/resources/templates/aprendizado/aulas.html
@@ -69,7 +69,7 @@
                   <div class="modal-body">
                     <!-- Embed do vídeo do YouTube -->
                     <iframe
-                      src="https://www.youtube.com/embed/wwqOJ2o84S4"
+                      src="${aula.link}"
                       title="Título do Vídeo"
                       frameborder="0"
                       allowfullscreen
