--- a/jobdelas/src/main/resources/templates/aprendizado/editar-curso.html
+++ b/jobdelas/src/main/resources/templates/aprendizado/editar-curso.html
@@ -17,6 +17,9 @@
         <label for="duracao">Duração:</label>
         <input type="text" id="duracao" name="duracao" th:value="${curso.duracao}" required><br>
 
+        <label for="descricao">Descrição:</label>
+        <input type="text" id="descricao" name="descricao" th:value="${curso.descricao}" required><br>
+
         <button type="submit">Atualizar</button>
     </form>
 </body>
