Fix: arrumando link para as aulas

--- a/jobdelas/src/main/resources/templates/aprendizado/aulas.html
+++ b/jobdelas/src/main/resources/templates/aprendizado/aulas.html
@@ -69,7 +69,7 @@
                   <div class="modal-body">
                     <!-- Embed do vídeo do YouTube -->
                     <iframe
-                      src="${aula.link}"
+                    th:src="${#strings.isEmpty(aula.link) ? '' : aula.link}"
                       title="Título do Vídeo"
                       frameborder="0"
                       allowfullscreen
