--- a/dev_frontend/style.css
+++ b/dev_frontend/style.css
@@ -1,14 +1,179 @@
+* {
+  padding: 0;
+  margin:0;
+  list-style: none;
+  text-decoration: none;
+}
+
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #6db6ff;
+  background: #fffafa;
+}
+
+/* FORMULARIO =================================== */
+
+.cointaner-principal {
+  width: 100%;
+  max-width: 1050px;
+  height: 530px;
+  margin: 50px auto;
+  display: flex;
+  background: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+.menu {
+  background-color: #B378FF;
+  width: 38%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.menu nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap:30px;
+}
+
+.menu nav a {
+  color: #fff;
+  font-size: 20px;
+}
+
+.menu nav i {
+  font-size: 25px;
+  margin-right: 10px;
+}
+
+
+.logo img {
+  width: 170px;
+}
+
+
+.info_titulo,
+.info_items {
+  position: relative;
+  z-index: 2;
+  color: #fff;
+}
+
+
+
+.info_titulo span {
+  font-size: 100px;
+  display: block;
+  text-align: center;
+}
+
+.info_titulo h2 {
+  font-size: 35px;
+  text-align: center;
+}
+
+.info_items p {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+
+.empresa {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap:10px;
+}
+
+form.form_corpo {
+  width: 62%;
+  padding: 30px;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  gap:20px;
+}
+
+form.form_corpo h2 {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 600;
+  color: #303030;
+}
+
+form.form_corpo .user_info {
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+form.form_corpo input,
+form.form_corpo textarea {
+  width: 100%;
+  padding: 8px 0px 5px;
+  border: none;
+  border-bottom: 1px solid #B378FF;
+  font-size: 14px;
+  font-weight: 400;
+}
+input:focus , textarea:focus{
+  outline: none; 
+}
+
+
+form.form_corpo textarea {
+  resize: none;
+  min-height: 30px;
+}
+
+
+#botao-formulario {
+  width: 200px;
+  height: 30px;
+  text-transform: uppercase;
+  background-color: #fff;
+  color: #B378FF;
+  border-radius: 10px;
+  border: 1px solid #B378FF;
+  cursor: pointer;
+}
+
+#botao-formulario:hover {
+  background-color: #B378FF;
+  color: #fff;
+}
+
+
+.esqueceu {
+  text-decoration: none;
+  color: #706273;
+  width: 150px;
+}
+
+.esqueceu:hover {
+  color: #B378FF;
+}
+
+
+@media (max-width: 768px) {
+  .section-form {
+      flex-direction: column;
+      height: auto;
   }
 
-  * {
-    padding: 0;
-    list-style: none;
+  .cantact_info {
+      width: 100%;
+      order: -1;
   }
-  
-  
 
-/* Componente Profile - Body */
-
+  .form_corpo {
+      width: 100%;
+  }
+}
