Ajustes rotas do back, e no front do login e cadastro

--- a/jobdelas/src/main/resources/templates/jobdelas/login.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/login.html
@@ -20,20 +20,20 @@
     <div class="container-formulario">
         <div class="cabecalho-fomulario">
             <h1>Bem vinda!</h1>
-            <p style="font-size: 22px; font-weight: 500;">Desenvolva-se</p>
+            <p>Desenvolva-se</p>
         </div>
 
         <div class="main-formulario">
             <form method="POST" className="formulario" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input style="border-radius: 15px; border: 1px solid #B378FF; height: 45px;" type="email"
+                    <input type="email"
                         class="form-control" name="email" id="email" aria-describedby="emailHelp" required>
 
                 </div>
                 <div class="mb-3">
                     <label for="senha" class="form-label">Senha</label>
-                    <input style="border: 1px solid #B378FF; border-radius: 15px; height: 45px;" type="password"
+                    <input  type="password"
                         class="form-control" id="senha" name="senha" required>
                     <div style="display: flex; justify-content: flex-end;">
                         <a class="link-referencia" href="#">Esqueceu a senha?</a>
