--- a/jobdelas/src/main/resources/templates/jb_company/criar-vagas.html
+++ b/jobdelas/src/main/resources/templates/jb_company/criar-vagas.html
@@ -1,89 +1,65 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <title>Cadastro de Produto</title>
-    <!-- Link para o Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Criar Vagas</title>
+    <link rel="stylesheet" href="/css/jobdelas_empresas.css" />
+</head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" th:href="@{/categorias}"
-        >Listagem de Categorias</a
-      >
-      <a class="navbar-brand" th:href="@{/produtos}">Listagem de Produtos</a>
-    </nav>
-
-    <div class="container mt-3">
-      <h2>Publicar vaga</h2>
-      <form th:action="@{/vagas/save}" th:object="${vagas}" method="post">
-        <div th:each="empresa : ${empresas}">
-          <div class="form-group">
-            <label for="'empresa-' + ${empresa.id}">Nome empresa:</label>
-            <input
-              class="form-control"
-              type="text"
-              id="'empresa-' + ${empresa.id}"
-              name="empresas"
-              th:value="${empresa.id}"
-              th:checked="${vagas.empresas.contains(empresa)}"
-            />
-            <label
-              class="form-check-label"
-              th:for="'empresa-' + ${empresa.id}"
-              th:text="${empresa.nome}"
-            ></label>
-          </div>
-
-          <div class="form-group">
-            <label for="funcao">Função:</label>
-            <input
-              type="text"
-              id="funcao"
-              class="form-control"
-              th:field="*{funcao}"
-            />
-          </div>
-
-          <div class="form-group">
-            <label for="descricao">Descrição:</label>
-            <input
-              type="text"
-              id="descricao"
-              class="form-control"
-              th:field="*{descricao}"
-            />
-          </div>
-
-          <div class="form-group">
-            <label for="localizacao">Localização:</label>
-            <input
-              type="text"
-              id="localizacao"
-              class="form-control"
-              th:field="*{localizacao}"
-            />
-          </div>
-
-          <div class="form-group">
-            <label for="status">Status:</label>
-            <input
-              type="text"
-              id="status"
-              class="form-control"
-              th:field="*{status}"
-            />
-          </div>
+<body>
+    <section class="cointaner-principal">
+        <div class="menu">
+            <nav>
+                <a href="#"><i class="fas fa-building"></i> Cadastrar Empresa</a>
+                <a href="#"><i class="fas fa-plus-circle"></i> Cadastrar Vagas</a>
+                <a href="#"><i class="fas fa-search"></i> Buscar Vaga</a>
+                <a href="#"><i class="fas fa-search"></i> Buscar Empresa</a>
+                <a href="#"><i class="fas fa-users"></i> Visualizar Candidatos</a>
+            </nav>
+            <div class="logo">
+                <img src="/img/jb_company.png" alt="Sua Logo" />
+            </div>
         </div>
 
-        <button type="submit" class="btn btn-primary">Publicar</button>
-      </form>
-    </div>
-  </body>
+        <form method="POST" th:object="${vagas}" enctype="multipart/form-data" class="form_corpo">
+            <h2>Cadastrar Vaga</h2>
+            <div class="empresa">
+
+                <select id="empresa_id" name="empresa_id" required>
+                    <option value="Escolha a empresa" disabled selected>Nome da Empresa</option>
+                    <option th:each="empresa : ${empresas}" th:value="${empresa.id}" th:text="${empresa.nome}"></option>
+                </select>
+
+                <label for="funcao">Função:</label>
+                <input type="text" id="funcao" name="funcao" th:field="*{funcao}" required />
+
+                <label for="salario">Salário:</label>
+                <input type="text" id="salario" name="salario" th:field="*{salario}" required />
+
+                <label for="cep">Cep:</label>
+                <input type="text" class="form-control" id="cep" name="cep" th:field="*{cep}" required />
+
+                <label for="localizacao">Localização:</label>
+                <input type="text" id="localizacao" name="localizacao" th:field="*{localizacao}" required />
+
+                <label for="descricao">Descrição:</label>
+                <textarea id="descricao" name="descricao" th:field="*{descricao}"></textarea>
+ 
+                <label for="status_vaga">Status:</label>
+                <select id="status_vaga" name="status_vaga" th:field="*{status_vaga}" required>
+                    <option value="true">Ativo</option>
+                    <option value="false">Não Ativo</option>
+                </select>
+
+                <button id="botao-formulario" class="btn" role="button" type="submit">
+                    Cadastrar
+                </button>
+            </div>
+        </form>
+    </section>
+    <script src="https://kit.fontawesome.com/cda1aa7b4f.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
